# team_cvap

./: CMakeLists.txt  LICENSE  README.md  amazon_challenge.rosinstall  install.sh  install_aragorn.sh  package.xml
amazon_challenge_motion/: setup.py  (+1 more)
apc_bt/apc_bt_comms/: CMakeLists.txt  package.xml
apc_bt/apc_bt_comms/action/: Apc.action  Manager.action
apc_bt/apc_bt_comms/srv/: SetBool.srv  TaskManager.srv
apc_bt/apc_bt_execute_action/: CMakeLists.txt  package.xml
apc_bt/apc_bt_execute_action/src/: do_nothing_action.cpp  execute_action.cpp  get_next_target_action.cpp  has_memory.cpp  has_memory_ids.cpp  has_memory_kinect.cpp  ids_no_move_home.cpp  is_level_1.cpp  is_level_2.cpp  is_level_3.cpp  is_level_4.cpp  is_object_simtrackable.cpp  is_place_failure.cpp  load_simtrack_models.cpp  look_bin_ids_action.cpp  look_bin_kinect_action.cpp  look_tote_ids_action.cpp  look_tote_kinect_action.cpp  move_action.cpp  move_ids_action.cpp  move_to_home_action.cpp  move_to_tote_action.cpp  pick_bin_action.cpp  pick_no_move_home.cpp  pick_tote_action.cpp  place_bin_action.cpp  place_failure_action.cpp  place_tote_action.cpp  set_ids_1_action.cpp  set_ids_2_action.cpp  set_ids_3_action.cpp  set_ids_4_action.cpp  set_ids_6_action.cpp  set_ids_8_action.cpp  set_memory.cpp  set_memory_ids.cpp  set_memory_kinect.cpp  success_action.cpp  unload_simtrack_models.cpp
apc_bt/apc_bt_launcher/: CMakeLists.txt  package.xml
apc_bt/apc_bt_launcher/data/: apc_pick_task.json  apc_pick_task_demo_2.json  apc_pick_task_output.json  apc_pick_task_simple.json  apc_pick_task_simple_output.json  apc_stow_task_simple.json  apc_stow_task_simple_output.json  bt_pick_baxter.txt  bt_pick_baxter_memory.txt  bt_stow_baxter.txt  interface_generator_2016.py  priority_lists_picking.yaml  priority_lists_stowing.yaml
apc_bt/apc_bt_launcher/launch/: apc_bt.launch
apc_bt/apc_bt_status_action/: CMakeLists.txt  package.xml
apc_bt/apc_bt_status_action/src/: apc_bt_status_action.cpp
apc_bt/apc_bt_task_manager/: CMakeLists.txt  package.xml
apc_bt/apc_bt_task_manager/src/: task_manager.cpp
apc_bt/apc_bt_test_server/: CMakeLists.txt  package.xml
apc_bt/apc_bt_test_server/src/: apc_bt_test_look_for_object.cpp  apc_bt_test_move.cpp  apc_bt_test_pick.cpp  apc_bt_test_place.cpp  apc_bt_test_server.cpp
apc_calibration/calibration_data/: CMakeLists.txt  README.md  package.xml
apc_calibration/calibration_data/extrinsics/: camera_mount.txt  external_kinect.txt  ids_left.txt  ids_right.txt  kinect_chest.txt  kinect_chest_collision_model.txt  kinect_external.txt  kinect_head.txt  left_end_effector_45.txt  left_end_effector_90.txt  right_end_effector_45.txt  right_end_effector_90.txt  shelf.txt  shelf_front.txt  shelf_front_manually_calibrated.txt  shelf_front_nominal.txt  tote.txt  tote_pick.txt  tote_stow.txt  tote_table.txt
apc_calibration/calibration_data/scripts/: calib_rpy.py
apc_calibration/calibration_data/urdf/: apc_baxter.urdf.xacro  apc_connector_suction_cup.urdf.xacro  apc_suction_extension.urdf.xacro  apc_suction_gripper.urdf.xacro  apc_suction_gripper_left45.urdf.xacro  apc_suction_gripper_right45.urdf.xacro
apc_calibration/calibration_routine/: CMakeLists.txt  README.md  package.xml
apc_calibration/calibration_routine/data/: binConfigurations.yaml  binConfigurationsForCameraMount.yaml  binConfigurationsForShelfCalib.yaml  binConfigurationsForTote.yaml  binConfigurationsIDSPosesAndConfig.yaml  binConfigurationsPickLeftArm.yaml  binConfigurationsPickRightArm.yaml  binConfigurations_stowing.yaml  ids_left_calib_sequence_left.txt  ids_left_calib_sequence_right.txt  ids_right_calib_sequence_left.txt  ids_right_calib_sequence_right.txt  kinect_chest_calib_sequence.txt  kinect_external_calib_sequence.txt  kinect_head_calib_sequence.txt  newBinConfigurations.yaml  pickBinConfigurationsSeeds.yaml  pickBinPosesIDSTF.yaml
apc_calibration/calibration_routine/launch/: baxter_sequence_chest.launch  baxter_sequence_external.launch  baxter_sequence_ids_left.launch  baxter_sequence_ids_right.launch  calib_ids_left.launch  calib_ids_right.launch  calib_kinect_chest.launch  calib_kinect_external.launch  calibration_sequence_ids.launch  calibration_sequence_kinect.launch  simtrack_calib.launch
apc_calibration/calibration_routine/scripts/: baxter_sequence_calibration.py  baxter_sequence_calibration_ids.py  bin_pose_calib.py  camera_mount_calib.py  camera_robot_calibration_apc.py  shelf_error_calib.py  tool_calib.py  tote_calib.py
apc_calibration/calibration_shelf/apc_shelf_calibration/: CMakeLists.txt  package.xml
apc_grasping/apc_manipulation/: CMakeLists.txt  package.xml
apc_grasping/apc_manipulation/action/: Approach.action  MoveArm.action  PickObject.action  PlaceObject.action
apc_grasping/apc_manipulation/config/: apc_baxter.srdf.xacro  apc_gripper.srdf.xacro  collision_objects.yaml  collision_objects_roadmap.yaml  moveit.rviz  moveit_stowing.rviz  ompl_planning.yaml  pick_object.yaml  place_object.yaml  static_tfs.yaml  stomp_planning.yaml  tsr.rviz
apc_grasping/apc_manipulation/data/: pickBinConfigurations.yaml  pickBinConfigurationsSeeds.yaml  pickBinPosesIDSTF.yaml  stowBinConfigurations.yaml  stowBinConfigurationsSeeds.yaml
apc_grasping/apc_manipulation/launch/: collision_objects_tf.launch  compute_roadmap.launch  demo1.launch  grasping.launch  grasping.launch.orig  milestone1.launch  moveit_baxter.launch  planning_context.launch  tool_calib_publisher.launch  visualize_tsrs.launch
apc_launch/: CMakeLists.txt  README.md  package.xml
apc_launch/launch/: apc.launch  apc_emergency.launch  gui.launch  machines.launch
apc_perception/perception_launch/: CMakeLists.txt  README.md  package.xml
apc_perception/perception_pc_segmentation/: CMakeLists.txt  package.xml
apc_utils/apc_diagnostic/: CMakeLists.txt  README.md  package.xml  setup.py
apc_utils/apc_json/: CMakeLists.txt  README.md  package.xml
apc_utils/apc_sim/: CMakeLists.txt  README.md  package.xml
apc_utils/apc_utils/: CMakeLists.txt  package.xml
apc_utils/rqt_apc/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
(+349 files in other folders)
