<package>

  <name>pr2_moveit_utils</name>
  <version>0.0.0</version>
  <description>
    Utilities for facilitating moveit motion plans on the PR2. 
  </description>
  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pr2_moveit_utils</url>
  <url type="bugtracker">https://bitbucket.org/cvapgoestoseattle/pr2_moveit_utils/issue</url>
  <url type="repository">https://bitbucket.org/cvapgoestoseattle/pr2_moveit_utils</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>  

</package>
