<package>

  <name>amazon_challenge_motion</name>
  <version>0.0.0</version>
  <description>
    Scripts and dictionaries for moving arms+base+torso of PR2 for Amazon Challenge with behavior tree interface.
  </description>
  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/amazon_challenge_motion</url>
  <url type="bugtracker">https://bitbucket.org/cvapgoestoseattle/amazon_challenge_motion/issue</url>
  <url type="repository">https://bitbucket.org/cvapgoestoseattle/amazon_challenge_motion</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>  

</package>
