<?xml version="1.0"?>
<package>
  <name>apc_bt_task_manager</name>
  <version>1.0.0</version>
  <description>
	  This package implements the BT actions responsible for processing the input file
	  and maintain the world belief.
  </description>

  <maintainer email="diogoa@kth.se">
    Diogo Almeida
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>apc_bt_comms</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>apc_bt_comms</run_depend>
</package>
