<?xml version="1.0"?>
<package>
  <name>calibration_routine</name>
  <version>0.0.0</version>
  <description>The calibration_routine package</description>

  <maintainer email="cruciani@kth.se">Silvia Cruciani</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_robot_calibration</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>baxter_interface</build_depend>

  <run_depend>camera_robot_calibration</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>baxter_interface</run_depend>


</package>