<?xml version="1.0"?>
<package>
  <name>apc_diagnostic</name>
  <version>0.0.1</version>
  <description>The apc_diagnostic package: this package allows to monitor all the components for the KTH apc system. It is based on the diagnostic ros package (Kevin Watts: https://github.com/ros/diagnostics) </description>

  <maintainer email="caccamo@kth.se">Sergio Caccamo</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/apc_diagnostic</url> -->

  <author email="caccamo@kth.se">Sergio Caccamo</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>


  <export>
    <architecture_independent/>
  </export>
</package>
